--- a/front end/project.html
+++ b/front end/project.html
@@ -99,6 +99,6 @@
             </div>
         </div>
     </div>
-    <span>Vibe Coder..........</span>
+    <span>Vibe Coder................</span>
 </body>
 </html>
